# DrugSHIFT

./: .gitignore  LICENSE  README.md  joint_embed.py  joint_embed_v6.py  joint_embedcmd.py  preprocess.py  requirements.txt  runner.py  setup.py  two_stage
adaptive_hidef/: README.md  pyproject.toml  requirements.txt
adaptive_hidef/adaptive_hidef/: __init__.py  cli.py  fusion.py  hidef_runner.py  pipeline.py  ppi.py
docs/: CONCLUSIONS_stage2_arc.md  DIAGNOSIS_hallucination_and_fixes.md  PIPELINE.md  READOUT_direction_modules.md  STAGE2_architecture.md
muse_stage1/: README.md  __init__.py  dropout.py  losses.py  model.py  runner.py  train.py
muse_stage1_vae/: __init__.py  configs.json  losses.py  model.py  runner.py  train.py
output/: output.cmd
tests/: conftest.py  test_dropout.py  test_losses.py  test_model.py  test_package.py
two_stage/: __init__.py  architecture.py  cache.py  direction_modules.py  eval.py  inference.py  joint_embed.py  losses.py  model.py  stage1_bridge.py  train.py
two_stage/stage1/: README.md  __init__.py  pseudo_labels.py  runner.py
two_stage/stage1/vae/: losses.py  model.py  runner.py  train.py
two_stage/stage2/: README.md  __init__.py  eval.py  inference.py  losses.py  stage1_cache.py  training.py
two_stage/stage2/docs/: CONCLUSIONS_stage2_arc.md  READOUT_direction_modules.md  (+1 more)
two_stage_v3/: README.md  __init__.py  architecture_v3.py  direction_modules.py  eval.py  inference_v3.py  stage1_cache.py  training_v3.py
two_stage_v3/docs/: CONCLUSIONS_stage2_arc.md  DIAGNOSIS_hallucination_and_fixes.md  READOUT_direction_modules.md
