[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptive_hidef"
version = "1.0.0"
description = "Build an adaptive protein-cluster hierarchy from a co-embedding (cosine PPI -> low-k HiDeF -> size-graded persistence fusion)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.24,<2.0",
    "pandas>=2.0",
    "scikit-learn>=1.2",
    "scipy>=1.10",
    "matplotlib>=3.6",
    "hidef==1.1.5",
    "cellmaps_generate_hierarchy==0.3.0",
    "igraph>=0.10",
    "leidenalg>=0.9",
]

[project.scripts]
adaptive-hidef = "adaptive_hidef.cli:main"

[tool.setuptools]
packages = ["adaptive_hidef"]
